<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characterDetailsContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:paddingBottom="@dimen/padding_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/ic_back_background"
            android:contentDescription="@string/back"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/characterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            tools:text="Jerry Smith" />

        <TextView
            android:id="@+id/characterStatusAndSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:drawablePadding="@dimen/padding_micro"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableStartCompat="@drawable/ic_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterName"
            tools:text="Alive - Human" />

        <TextView
            android:id="@+id/characterTypeHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterStatusAndSpecies" />

        <TextView
            android:id="@+id/characterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_small"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterTypeHint"
            tools:text="type" />

        <TextView
            android:id="@+id/characterLastLocationHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/last_known_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterType" />

        <TextView
            android:id="@+id/characterLastLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_small"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterLastLocationHint"
            tools:text="Earth (Replacement Dimension)" />

        <TextView
            android:id="@+id/characterFirstSeenHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/first_seen_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterLastLocation" />

        <TextView
            android:id="@+id/characterFirstSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_small"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterFirstSeenHint"
            tools:text="Lawnmower Dog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>